--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,7 +3,7 @@ import BaseHead from '../components/BaseHead.astro';
 import Header from '../components/Header.astro';
 import Footer from '../components/Footer.astro';
 import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
-import { campaigns as CAMPAIGNS } from '../data/campaigns';
+import { campaigns as CAMPAIGNS } from '../campaigns';
 
 // Compute next session (auto-updates; respects biweekly)
 function getNextSession(weekday: number, biweekly = false) {
