--- a/src/pages/campaigns/[slug].astro
+++ b/src/pages/campaigns/[slug].astro
@@ -103,8 +103,8 @@ const pdfSrc = '/acroterra.pdf';
               <a class="btn" href={pdfSrc} download>Download PDF</a>
             </>
           )}
-          <!-- Button now routes to /vtt so your function can check status -->
-          <a class="vtt-btn" href="/vtt">
+          <!-- Direct link to VTT -->
+          <a class="vtt-btn" href="https://play.questwithwasem.com" target="_blank" rel="noopener">
             <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="#ffd166" viewBox="0 0 24 24">
               <path d="M12 2 2 9l10 13 10-13-10-7Zm0 2.3L19.1 9H4.9L12 4.3Zm0 15.9-7.16-9.3h14.32L12 20.2Z"/>
             </svg>
