style: make Session Recaps heading white

--- a/src/pages/campaigns/[slug].astro
+++ b/src/pages/campaigns/[slug].astro
@@ -117,6 +117,10 @@ const recaps = await Promise.all(
         margin-top: 48px;
       }
 
+      .recaps h2 {
+        color: #fff;
+      }
+
       .recap {
         margin-bottom: 40px;
         padding: 20px;
